Fix CSS styles: remove font-family from normalize; update font-size and remove unnecessary letter-spacing

--- a/src/css/partials/leave-an-application.css
+++ b/src/css/partials/leave-an-application.css
@@ -32,7 +32,6 @@
     /* width: 335px; */
     font-size: 12px;
     line-height: 1.33;
-    letter-spacing: 0;
     text-align: start;
     color: rgba(18, 20, 23, 0.5)
 }
@@ -289,7 +288,7 @@
 
     .submit_text {
         width: 500px;
-        font-weight: 14;
+        font-size: 14px;
         line-height: 1.71;
     }
 
